<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/myDrawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.MainActivity">

    <RelativeLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/common_toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_54"
            android:background="#cc212d"
            android:elevation="@dimen/dp_6"
            app:layout_scrollFlags="scroll|enterAlways">

            <TextView
                android:id="@+id/common_toolbar_title_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_16"
                tools:text="开发环境" />
        </android.support.v7.widget.Toolbar>

        <RelativeLayout
            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/common_toolbar"
            android:layout_above="@+id/main_bottom"
            android:background="@android:color/white"/>

        <LinearLayout
            android:id="@+id/main_bottom"
            android:background="#F5F5F8"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:gravity="center_vertical"
            android:layout_height="60dp"
            android:orientation="horizontal"
            tools:ignore="DisableBaselineAlignment">

            <RelativeLayout
                android:id="@+id/btn_container_homepage"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:onClick="onTabClicked"
                android:layout_weight="1">
                <Button
                    android:id="@+id/btn_homepage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableTop="@drawable/selector_tab_home"
                    android:onClick="onTabClicked"
                    android:background="#F5F5F8"
                    android:paddingBottom="5dip"
                    android:paddingTop="5dip"
                    android:scaleType="matrix"
                    android:text="@string/application_text"
                    android:textColor="@color/tab_main_color"
                    android:textSize="@dimen/dp_13" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/btn_container_structure"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:onClick="onTabClicked"
                android:layout_weight="1" >

                <Button
                    android:id="@+id/btn_structure"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableTop="@drawable/selector_tab_structure"
                    android:onClick="onTabClicked"
                    android:background="#F5F5F8"
                    android:paddingBottom="5dip"
                    android:paddingTop="5dip"
                    android:scaleType="matrix"
                    android:text="@string/structure_text"
                    android:textColor="@color/tab_main_color"
                    android:textSize="@dimen/dp_13" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/btn_container_navigation"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:onClick="onTabClicked"
                android:layout_weight="1" >

                <Button
                    android:id="@+id/btn_navigation"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableTop="@drawable/seleector_tab_navigation"
                    android:onClick="onTabClicked"
                    android:background="#F5F5F8"
                    android:paddingBottom="5dip"
                    android:paddingTop="5dip"
                    android:scaleType="matrix"
                    android:text="@string/navigatioin_text"
                    android:textColor="@color/tab_main_color"
                    android:textSize="@dimen/dp_13" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/btn_container_pro"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:onClick="onTabClicked"
                android:layout_weight="1" >

                <Button
                    android:id="@+id/btn_pro"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableTop="@drawable/selector_tab_pro"
                    android:onClick="onTabClicked"
                    android:background="#F5F5F8"
                    android:paddingBottom="5dip"
                    android:paddingTop="5dip"
                    android:scaleType="matrix"
                    android:text="@string/project_text"
                    android:textColor="@color/tab_main_color"
                    android:textSize="@dimen/dp_13" />
            </RelativeLayout>

        </LinearLayout>

    </RelativeLayout>


    <android.support.design.widget.NavigationView
        android:id="@+id/main_navifation"
        android:layout_gravity="start"
        android:background="#ffffff"
        app:menu="@menu/nav_menu"
        android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"/>

</android.support.v4.widget.DrawerLayout>